
[package]
name = "ups"
authors = ["Zachary Riedlshah <git@zacharyrs.me>"]
description = "Cross-platform client for Dynamix Defender ups units."
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
figment = { version = "0.10.6", features = ["toml"] }
hidapi = "1.4.1"
hostname = "0.3.1"
lettre = "0.10.1"
serde = { version = "1.0.140", features = ["derive"] }
